# url_short

./: .gitignore  Cargo.toml  build.sh
.github/workflows/: ci.yml
infra/: .terraform.lock.hcl  api.tf  config.tf  inputs.tf  template.tfvars
src/: admin.rs  hit.rs  main.rs
src/templates/: _layout.css  _layout.html  admin.html  admin_empty.html  admin_row.html  error.html  login.html  nav.html  nav_first.html  nav_next.html
