[package]
name = "url_short"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws-config = "0.53.0"
aws-sdk-dynamodb = "0.23.0"
chrono = "0.4.23"
cookie = { version = "0.17.0", features = ["percent-encode"] }
http = "0.2.8"
lambda_http = { version = "0.7", default-features = false, features = [
    "apigw_http",
] }
lambda_runtime = "0.7"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }
urlencoding = "2.1.2"
